stopped horizontal scrolling

--- a/Breakfast in the Dolomites.materials/Templates/TSF/style.css
+++ b/Breakfast in the Dolomites.materials/Templates/TSF/style.css
@@ -433,6 +433,7 @@ Styles for play.html
 	position: absolute;
 	right: 0px;
 	top: 0px;
+	overflow-x: hidden;
 }
 
 /*
